--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,12 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/auth": "5.5.*|5.6.*|5.7.*"
+        "illuminate/auth": "5.5.*|5.6.*|5.7.*|5.8.*|^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
-        "phpunit/phpunit": "^6.5|^7.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0|^4.0",
+        "phpunit/phpunit": "^6.5|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
